--- a/FontEnd/index.html
+++ b/FontEnd/index.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/index.css">
 
 
 
@@ -62,6 +63,9 @@
 							</li>
 							<li>
 								<a href="dangky.html" class="nav-link text-left">Log out</a>
+							</li>
+							<li>
+								<a href="" class="nav-link text-left">Đăng bài</a>
 							</li>
 						</ul>
 						</ul>
@@ -98,75 +102,8 @@
 						<h3 class="heading-92913 text-black text-center">Our Destinations</h3>
 					</div>
 				</div>
-				<div class="row" id="news-feed">
-					<!-- <div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_1.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3 onclick="navigateToDetail(1)">
-										Croatia &mdash; Columbia
-								</h3>
-							</div>
-						</div> 
-					</div>
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_2.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3>
-									<a href="#">
-										<span class="icon-room mr-1 text-primary"></span> Croatia &mdash; Columbia</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_1.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3>
-									<a href="#">
-										<span class="icon-room mr-1 text-primary"></span> Croatia &mdash; Columbia</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_2.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3>
-									<a href="#">
-										<span class="icon-room mr-1 text-primary"></span> Croatia &mdash; Columbia</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_1.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3>
-									<a href="#">
-										<span class="icon-room mr-1 text-primary"></span> Croatia &mdash; Columbia</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 col-lg-4 mb-4">
-						<div class="service-39381">
-							<img src="images/hero_2.jpg" alt="Image" class="img-fluid">
-							<div class="p-4">
-								<h3>
-									<a href="#">
-										<span class="icon-room mr-1 text-primary"></span> Croatia &mdash; Columbia</a>
-								</h3>
-							</div>
-						</div>
-					</div>
-
-				</div> -->
+				<div class="row" id="news-feed"></div>
+					
 			</div>
 		</div>
 
