update detail page

--- a/FontEnd/detail.html
+++ b/FontEnd/detail.html
@@ -72,25 +72,14 @@
             </div>
         </div>
 
-        <div class="hero-slide owl-carousel site-blocks-cover">
-            <div class="intro-section" style="background-image: url('images/anh.jpg');">
-                <div class="container">
-                    <div class="row align-items-center">
-                    </div>
-                </div>
-            </div>
-
-            <div class="intro-section" style="background-image: url('images/anh2.jpg');">
-                <div class="container">
-                    <div class="row align-items-center">
-                    </div>
-                </div>
-            </div>
-
+        <div id="slide" class="hero-slide owl-carousel site-blocks-cover">
+            
         </div>
         <!-- END slider -->
 
-        <div id="detail" class="bg-light"></div>
+        <div class="bg-light">
+            <div id="detail" class="container"></div>
+        </div>
 
         <div class="site-section bg-image overlay" style="background-image: url('images/hero_2.jpg');">
             <div class="container">
